Removed test collection and added challenge media

--- a/api/challenges/models/challenges.settings.json
+++ b/api/challenges/models/challenges.settings.json
@@ -19,6 +19,17 @@
     },
     "Content": {
       "type": "richtext"
+    },
+    "FeaturedMedia": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "files",
+        "images",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
