--- a/package.json
+++ b/package.json
@@ -11,17 +11,13 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "strapi": "3.3.4",
-    "strapi-admin": "3.3.4",
-    "strapi-utils": "3.3.4",
-    "strapi-plugin-content-type-builder": "3.3.4",
-    "strapi-plugin-content-manager": "3.3.4",
-    "strapi-plugin-users-permissions": "3.3.4",
-    "strapi-plugin-email": "3.3.4",
-    "strapi-plugin-upload": "3.3.4",
-    "strapi-connector-bookshelf": "3.3.4",
+    "@strapi/plugin-i18n": "4.1.12",
+    "@strapi/plugin-users-permissions": "4.1.12",
+    "@strapi/strapi": "4.1.12",
     "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "sharp": "^0.30.5",
+    "sqlite3": "5.0.2",
+    "webpack": "^5.72.1"
   },
   "author": {
     "name": "A Strapi developer"
